--- a/GuessWord/guessword/templates/custompage.html
+++ b/GuessWord/guessword/templates/custompage.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Greetings</title>
+	<meta charset="utf-8">
+    <title>Grngs</title>
     <style type="text/css">
         p {
          text-align:center;
