--- a/GuessWord/guessword/templates/custompage.html
+++ b/GuessWord/guessword/templates/custompage.html
@@ -2,6 +2,7 @@
 <head>
     <title>Greetings</title>
     <style type="text/css">
+		body {margin:0;}
         p {
          text-align:center;
          letter-spacing: 5px;
