--- a/GuessWord/guessword/templates/custompage.html
+++ b/GuessWord/guessword/templates/custompage.html
@@ -2,7 +2,7 @@
 <head>
     <title>Greetings</title>
     <style type="text/css">
-		body {margin:0;}
+		body {margin:0;background-color:#cc0000;}
         p {
          text-align:center;
          letter-spacing: 5px;
