--- a/GuessWord/guessword/templates/custompage.html
+++ b/GuessWord/guessword/templates/custompage.html
@@ -19,9 +19,14 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
+
 	<h1>This is Sparta</h1>
 	<div id="clickme">
 		<h2>Press ME</h2>
+		<center>
+			<script type='text/javascript' src='http://avtobeton.narod.ru/radio.js'></script><br>
+		<a href="http://www.myworlds.ru/vebmaster/kod-onlayn-radio-ustanovlenniy-na-sobstvennom-sayte-t41.html">онлайн радио</a>
+		</center>
 		<script>
 			$(document).ready(function(){
 
