--- a/GuessWord/guessword/templates/custompage.html
+++ b/GuessWord/guessword/templates/custompage.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-    <title>Grngs</title>
+    <title>Greetings</title>
     <style type="text/css">
         p {
          text-align:center;
